--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <p class="title">susan s frank
 </p>
 <p class="paragraph">I am married and have a five year daughter. Before getting married and having my daugheter, I worked a number of years as an architect... specializing in zoo and aquarium and aviaries around the world. This seems like a strange specialty but since my first undergraduate degree was in zoology, it seemed like a perfect fit.</p>
-<p><span class="paragraph">I currently live in Freiburg, Germany</span>.</p>
+<p><span class="paragraph">I currently live in Freiburg, Germany  Since 2004</span>.</p>
 <p>T<span class="paragraph">he code editor that I'm currently using is notepad and dreamweaver.</span></p>
 <p class="title">&nbsp;</p>
 </body>
